# meowpowminer

./: .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml  circle.yml
cmake/Hunter/: config.cmake
docs/: API_DOCUMENTATION.md  BUILD.md  POOL_EXAMPLES_ETH.md
libcrypto/: attributes.hpp  bitwise.hpp  builtins.hpp  endianess.hpp  ethashprime.cpp  ethashprime.hpp  hash_types.hpp  keccak.cpp  keccak.hpp  kiss99.hpp  progpowprime.cpp  progpowprime.hpp
libdevcore/: CommonData.cpp  CommonData.h
libethash-cl/: CMakeLists.txt
libethash-cl/kernels/: README.md
libethash-cpu/: CMakeLists.txt
libethash-cuda/: CMakeLists.txt  CUDAMiner_cuda.cu  CUDAMiner_cuda.h  CUDAMiner_kernel.cu  dagger_shuffled.cuh  ethash_cuda_miner_kernel.h
libethashprime-cl/: CLMiner.cpp  CLMiner_kernel.cl
libethashprime-cpu/: CPUMiner.cpp
libethashprime-cuda/: CMakeLists.txt  CUDAMiner.cpp  ethash_cuda_miner_kernel.cu
libethcore/: CMakeLists.txt  Farm.cpp  Farm.h  Miner.h
libhwmon/: CMakeLists.txt
libpoolprotocols/: PoolClient.h  PoolManager.cpp
libpoolprotocols/getwork/: EthGetworkClient.cpp  EthGetworkClient.h
libpoolprotocols/stratum/: EthStratumClient.cpp
libpoolprotocols/testing/: SimulateClient.cpp  SimulateClient.h
meowpowminer/: main.cpp
scripts/: testpools.bash
test/: kernel.cu
